# Mezz_Foundation

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  codecov.yml
Partial/: MurmurHash3.h  SortedVector.h  StreamLogging.cpp  StreamLogging.h  Vector3.cpp  Vector3.h  murmurhash3.cpp
dox/: dox.h
include/: Base64.h  BaseSerializationAttribute.h  BaseSerializationBackEnd.h  BaseSerializationInternalImplementation.h  BaseSerializationNode.h  BaseSerializationRootNode.h  BinaryBuffer.h  BinaryFind.h  BitFieldTools.h  CommandLine.h  ContainerTools.h  CountedPtr.h  FlatMap.h  FunctionalExtras.h  FunctionalFunctorsContainerToContainer.h  FunctionalFunctorsContainerToData.h  FunctionalPipe.h  FunctionalTools.h  Introspection.h  ManagedArray.h  MemberTags.h  MurmurHash.h  Serialization.h  SerializationDeserializer.h  SerializationPointerTracker.h  SerializationPolymorphicCaster.h  SerializationSerializer.h  SerializationSimpleBackend.h  SerializationTree.h  SerializationUtility.h  SortedManagedArray.h  SortedVector.h  StaticAny.h  StreamLogging.h  StringTools.h  TupleTools.h  Version.h  binaryfind.h  datastream.h  enumerations.h  (+8 more)
src/: Base64.cpp  BinaryBuffer.cpp  CommandLine.cpp  FunctionalTools.cpp  MurmurHash.cpp  StreamLogging.cpp  StringTools.cpp  exception.cpp  hashedstring.cpp  murmurhash3.cpp  murmurhash3.h.cpp  serialization.cpp  unicode.cpp
test/: Base64Benchmarks.h  Base64Tests.h  BinaryBufferTests.h  BitFieldToolsTests.h  CommandLineTests.h  ContainerToolsTests.h  CountedPtrBenchmarks.h  CountedPtrTests.h  ExceptionTests.h  FlatMapSequenceTests.h  FlatMapTests.h  FunctionalToolsTests.h  IntrospectionTests.h  ManagedArraySequenceTests.h  ManagedArrayTests.h  MurmurHashTests.h  SerializationTests.h  SortedManagedArrayTests.h  SortedVectorTests.h  StaticAnyTests.h  StreamLoggingTests.h  StringToolsTests.h  TupleToolsTests.h
test/Partial/: StreamLogging.h
test/old tests/: MurmurHash3.h  SortedVector.h  Vector3.h  binarytoolstests.h  countedptrtests.h  hashedstringtests.h  loggingtests.h  logtooltests.h  managedptrtests.h  sortedvectortests.h  statemachinetests.h  timestamptests.h  trietests.h  uidgeneratortests.h  vector3tests.h  versiontests.h
